# cyberbrowser

./: .gitignore  GREY_DELETE.md  JOB_QUEUE.md  MISSING_APIS_INVENTORY.md  MULTITHREADED_GC.md  MULTITHREADED_JAVASCRIPT.md  PARALLEL_CSS_APPLICATION.md  PARALLEL_CSS_LAYOUT.md  PARALLEL_CSS_V2.md  README.md  WRITE_BARRIER.md  body_fragment.html  build.sh  build_macos_app.sh  chrome_dom_home.html  chrome_err.txt  chrome_fetch.html  chrome_fetch2.html  compare_dom.py  gradlew  gradlew.bat  instrument_handle_barriers.pl  instrument_handle_barriers.py  instrument_property_barriers.pl  instrument_qjs_heap_barriers.pl  instrument_qjs_helpers.pl  instrument_setvalue_barriers.pl  layout_dump.txt  rebuild.sh  settings.gradle  youtube_final.html  youtube_initial.html  youtube_loaded.html  yti.json
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AppIcon.icns  triangle.frag.spv  triangle.vert.spv
app/src/main/cpp/: Android.mk  default_album_art.c  default_album_art.h  main_android.cpp  main_macos.cpp  main_windows.cpp  media_store.cpp  media_store.h  mp4_metadata.cpp  mp4_metadata.h  platform_context_menu_macos.mm  test_glfw_resize.cpp  test_mp4_metadata.cpp  test_native.c  test_resize_capture.cpp  test_text_invariance.cpp  test_text_render.cpp  test_url.c  ui_layout.cpp  ui_layout.h  vulkan_ui.cpp  vulkan_ui.h
app/src/main/java/com/bgmdwldr/vulkan/: MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: triangle.frag  triangle.vert
app/src/test/cpp/: Android.mk  test_main.c
browser-emulator/: BROWSER_API_AUDIT.md  CMakeLists.txt  Makefile  build.bat  build.sh  build_msvc.bat  build_msvc.sh  build_msvc_clean.bat
browser-emulator/cmake/: EmbedShaders.cmake
browser-emulator/include/: audio_extract.h  browser_api_impl.h  browser_api_impl_handles.h  browser_api_impl_internal.h  browser_api_impl_types.h  css_parser.h  debug_shape.h  html_dom.h  http_download.h  jobs.h  js_quickjs.h  preorder_compaction_array.h  win32_compat.h
browser-emulator/include/win32/: dirent.h  pthread.h
browser-emulator/src/: audio_extract.c  browser_api_impl.cpp  css_parser.cpp  html_dom.cpp  html_media_extract.cpp  http_download.c  jobs.c  js_quickjs.cpp  preorder_compaction_array.cpp  tls_client.c
browser-emulator/src/browser/: css_api.cpp  dom_api.cpp  event_api.cpp  misc_api.cpp  storage_api.cpp  timer_api.cpp
browser-emulator/src/platform/: http_curl.c  platform.c  platform_android.c  platform_posix.c
browser-emulator/tests/: CMakeLists.txt  test_analyze_long_video.c  test_browser_api_impl.cpp  test_css_parser.cpp  test_exception_debug.cpp  test_gc_multithreaded.cpp  test_gc_unified.cpp  test_googlevideo_file.c  test_lazy_parsing.cpp  test_logical_operators.cpp  test_main.cpp  test_parsing_speed_bench.cpp  test_post.c  test_preorder_compaction_array.cpp  test_youtube_live_fetch.cpp  test_youtubei_get.c  test_youtubei_probe.c
cyberbrowser/: BROWSER_API_AUDIT.md  CMakeLists.txt  build.bat  build.sh  build_msvc.bat  build_msvc.sh  diag_out.txt  layout_dump.txt  youtube_final.html  youtube_loaded.html
cyberbrowser/build-mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cyberbrowser/build-mingw/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cyberbrowser/docs/: NESTED_IIFE_IMPLEMENTATION_PLAN.md
cyberbrowser/include/: browser_api_impl.h  browser_api_impl_handles.h  browser_api_impl_internal.h  browser_api_impl_types.h  css_layout.h  css_parser.h  display_list.h  gc_handle_access.h  gc_value_helpers.h  html_dom.h  html_media_extract.h  http_download.h  image_cache.h  js_quickjs.h  lockfree_hash_table.h  platform.h  session_state.h  text_shaper.h  tls_client.h  url_analyzer.h  url_utils.h  utf8_filename.h  vulkan_font_stub.h
cyberbrowser/include/win32/: msvc_quickjs_compat.h  pthread.h  unistd.h
cyberbrowser/include/win32/sys/: time.h
cyberbrowser/src/: browser_api_impl.cpp  css_layout.cpp  css_parser.cpp  cyberbrowser_main.cpp  display_list.cpp  html_dom.cpp  html_media_extract.cpp  http_download.c  image_cache.cpp  js_quickjs.cpp  lockfree_hash_table.cpp  session_state.c  text_shaper.cpp  url_analyzer.c  url_analyzer.cpp  vulkan_font_stub.cpp  vulkan_main.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_ui.cpp  vulkan_ui.h
cyberbrowser/src/browser/: console_api.cpp  crypto_api.cpp  css_api.cpp  dom_api.cpp  event_api.cpp  fetch_api.cpp  geolocation_api.cpp  media_source_api.cpp  minimp4_impl.cpp  misc_api.cpp  service_worker_api.cpp  shadow_dom_api.cpp  timer_api.cpp  url_api.cpp
cyberbrowser/src/platform/: platform_android.c  platform_http.c  platform_windows.c
cyberbrowser/tests/: CMakeLists.txt  CMakeLists.txt.static_patch  download_cli.cpp  test_analyze_long_video.cpp  test_atom_cache_bench.cpp  test_browser_api_impl.cpp  test_browser_emulation.c  test_css_layout.cpp  test_css_parser.cpp  test_fetch_visitor_data.c  test_gc_multithreaded.cpp  test_gc_unified.cpp  test_googlevideo_connect.c  test_googlevideo_http.c  test_interrupt.cpp  test_long_video_analyze.cpp  test_main.cpp  test_nested_iife.cpp  test_runner.h  test_two_gets.c  test_two_tls.c  test_watch_then_youtubei.c  test_youtube_data_scripts.cpp  test_youtube_live_fetch.cpp
scripts/: analyze_apis.py  capture_chrome_screenshot.py  capture_youtube_network.py  compare_screenshots.py  embed_album_art.py  embed_shaders.py  extract_browser_apis.py  generate_default_album_art.py  generate_icon.py  patch_quickjs_msvc.py  run_full_extraction.py  run_visual_diff.py  start-emulator.sh  stop-emulator.sh
youtube_data/: find_ytdapp.py  watch_page.html  youtube_external_scripts.txt  youtube_page.html  youtube_script_000_inline.js  youtube_script_001_inline.js  youtube_script_002_inline.js  youtube_script_003_inline.js  youtube_script_004_inline.js  youtube_script_005_inline.js  youtube_script_006_external.js  youtube_script_007_external.js  youtube_script_008_external.js  youtube_script_009_external.js  youtube_script_010_inline.js  youtube_script_011_inline.js  (+38 more)
(+81 files in other folders)
